# Research-agent

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC_V2.md  pyproject.toml  test_flow.py
.runtime/artifacts/audit_run/: main.tex  references.bib  summary.json
.runtime/artifacts/run-036e0ae6/: main.tex  summary.json
.runtime/artifacts/run-08652ef9/: summary.json
.runtime/artifacts/run-09eb686f/: main.tex  references.bib  summary.json
.runtime/artifacts/run-51e61be6/: summary.json
.runtime/artifacts/run-5d3e925c/: main.tex  references.bib  summary.json
.runtime/artifacts/run-7bbb2b1b/: main.tex  references.bib  summary.json
.runtime/artifacts/run-c88648cd/: summary.json
.runtime/artifacts/run-d8e03f7e/: compile_instructions.md  summary.json
.runtime/artifacts/run-e55763e8/: main.tex  summary.json
.runtime/artifacts/run-f6c20bd4/: main.tex  summary.json
configs/: settings.example.yaml  settings.yaml
scripts/: bootstrap.ps1
spec/: design-v2.md  plan-v2.md  requirements-v2.md
src/research_agent/app/: gradio_app.py  webapp.py
src/research_agent/config/: __init__.py  loader.py  schema.py
src/research_agent/models/: __init__.py  llm_client.py  nvidia_client.py
src/research_agent/observability/: __init__.py  checkpoints.py  progress.py
src/research_agent/orchestration/: graph.py  state.py
src/research_agent/output/: __init__.py  exporter.py
tests/: conftest.py
tests/integration/: test_iteration_loop.py
tests/unit/: test_checkpoint_persistence.py  test_citation_verifier.py  test_config_loader.py  test_critic_node.py  test_indexing_contradictions.py  test_nvidia_client.py  test_open_alex.py  test_orchestration_edge_cases.py  test_output_pipeline.py  test_rag_indexer.py  test_smoke.py  test_tool_adapters.py  test_tool_registry.py  test_webapp.py  test_worker_node.py
(+33 files in other folders)
