[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "API-first, subagent-driven research agent with Deep RAG and LaTeX output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain>=0.2.0",
  "langchain-nvidia-ai-endpoints>=0.3.5",
  "litellm>=1.40.0",
  "fastapi>=0.136.0",
  "uvicorn>=0.30.0",
  "gradio>=4.44.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "PyYAML>=6.0.2",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "browser-use>=0.1.0",
  "qdrant-client>=1.9.0",
  "pymupdf>=1.24.0",
  "tenacity>=8.3.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
